--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2023 Git Training
 -->
 <head>
-	<title>Example Website</title>
+	<title>Website Git</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Best Git training ever
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; My Training for Git</p>
 	</footer>
 </body>
 </html>
